--- a/.travis.yml
+++ b/.travis.yml
@@ -22,14 +22,17 @@ jobs:
     - DIST_DIR_S3=dist/s3
     - DIST_DIR_GITHUB=dist/github
     - GITHUB_RELEASE_FILENAME=list-locations-bmlt.zip
+    - PLUGIN="list-locations-bmlt"
+    - MAINFILE="list-locations.php"
     script:
     - find ./ -type d | xargs chmod 755
     - find ./ -name '*.php' | xargs chmod 644
-    - zip -r $ZIP_FILENAME list-locations-bmlt && mkdir $BUILD_DIR && mv $ZIP_FILENAME $BUILD_DIR/
+    - zip -r $ZIP_FILENAME ./ -x "*.git*" -x "*.editorconfig*" -x "*.travis.yml*" -x "*assets*" -x "*vendor*" -x "composer.*" -x "*.gitattributes" && mkdir $BUILD_DIR && mv $ZIP_FILENAME $BUILD_DIR/
     before_deploy:
-    - chmod +x travis/deploy-wordpress.sh
     - mkdir -p $DIST_DIR_S3 && cp $BUILD_DIR/$ZIP_FILENAME $DIST_DIR_S3/$ZIP_FILENAME
     - mkdir -p $DIST_DIR_GITHUB && cp $BUILD_DIR/$ZIP_FILENAME $DIST_DIR_GITHUB/$GITHUB_RELEASE_FILENAME
+    - curl -LO https://raw.githubusercontent.com/bmlt-enabled/bmlt-wordpress-deploy/master/deploy-wordpress.sh
+    - chmod +x deploy-wordpress.sh
     deploy:
     - provider: s3
       access_key_id: AKIAI7JHYFA6DI3WYP5A
@@ -50,7 +53,7 @@ jobs:
       on:
         tags: true
     - provider: script
-      script: bash travis/deploy-wordpress.sh
+      script: ./deploy-wordpress.sh
       skip_cleanup: true
       on:
         tags: true
