use GetServerInfo to check version
github ci

rm ignore

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,14 @@
 {
+  "name": "bmlt/list-locations-bmlt",
+  "description": "This is a WordPress plugin for BMLT.",
+  "type": "project",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "pjaudiomv"
+    }
+  ],
   "require-dev": {
     "squizlabs/php_codesniffer": "3.*"
   }
 }
-
