--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -5,28 +5,22 @@ on:
     branches: [ 'master' ]
 
 jobs:
-  deploy-list-locations-latest:
+  lint:
     runs-on: ubuntu-latest
-    permissions:
-      id-token: write
-      contents: write
     env:
-      BUILD_DIR: build
-      DIST_DIR_S3: dist/s3
-      DIST_DIR_GITHUB: dist/github
-      GITHUB_RELEASE_FILENAME: list-locations-bmlt.zip
-      S3_KEY: list-locations-bmlt
+      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
     steps:
-      - uses: actions/checkout@v2
-        id: code-checkout
+      - name: Check out code
+        uses: actions/checkout@v2
 
-      - name: Validate composer.json and composer.lock
-        id: composer-validate
-        run: composer validate
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: 7.4
 
       - name: Cache Composer packages
         id: composer-cache
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: vendor
           key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
@@ -36,24 +30,66 @@ jobs:
       - name: Install dependencies
         if: steps.composer-cache.outputs.cache-hit != 'true'
         id: install-dependencies
-        run: composer install --no-dev --prefer-dist --no-progress --no-suggest
+        run: make composer
 
-      - name: Prepare zip file
+      - name: PHPCS checker
+        id: php-codesniffer
+        run: make lint
+
+      - uses: act10ns/slack@v1
+        with:
+          status: ${{ job.status }}
+          steps: ${{ toJson(steps) }}
+          channel: '#list-locations-bmlt'
+        if: failure()
+
+  deploy:
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: write
+    env:
+      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+      S3_BUCKET: archives.bmlt.app
+      S3_KEY: list-locations-bmlt
+      BUILD_DIR: build
+      DIST_DIR_S3: dist/s3
+      PLUGIN: "list-locations-bmlt"
+    needs: [ lint ]
+    steps:
+      - uses: actions/checkout@v3
+        id: code-checkout
+
+      - name: Prepare to deploy
         run: |
-          export ZIP_FILENAME=${S3_KEY}-build${GITHUB_RUN_NUMBER}-${GITHUB_SHA}.zip
+          export FILENAME=${PLUGIN}-build-${GITHUB_RUN_NUMBER}-${GITHUB_SHA}
+          export ZIP_FILENAME=$FILENAME.zip
           echo "ZIP_FILENAME=${ZIP_FILENAME}" >> $GITHUB_ENV
-          zip -r $ZIP_FILENAME ./ -x "*.git*" -x "*.editorconfig*" -x "*vendor*" -x "composer.*" -x "*.github*" -x "*assets*" -x "*.gitattributes"
-          mkdir $BUILD_DIR && mv $ZIP_FILENAME $BUILD_DIR/
-          mkdir -p $DIST_DIR_S3 && cp $BUILD_DIR/$ZIP_FILENAME $DIST_DIR_S3/$ZIP_FILENAME
-          mkdir -p $DIST_DIR_GITHUB && cp $BUILD_DIR/$ZIP_FILENAME $DIST_DIR_GITHUB/$GITHUB_RELEASE_FILENAME
+          make build
+          mkdir -p ${DIST_DIR_S3} && cp ${BUILD_DIR}/${ZIP_FILENAME} ${DIST_DIR_S3}/${ZIP_FILENAME}
 
       - name: configure aws credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/github-actions/gh-ci-s3-artifact
-          role-session-name: gh-actions-upcoming-meetings
+          role-session-name: gh-actions-${{ env.PLUGIN }}
           aws-region: us-east-1
 
-      - name: copy artifacts to s3
+      - name: copy artifact to s3
         run: |
-          aws s3 cp ${DIST_DIR_S3}/${ZIP_FILENAME} s3://${{ secrets.S3_BUCKET }}/${S3_KEY}/${ZIP_FILENAME}
+          aws s3 cp $DIST_DIR_S3/$ZIP_FILENAME s3://$S3_BUCKET/$S3_KEY/$ZIP_FILENAME
+
+      - name: Publish Release to Latest WP
+        id: publish_latest
+        uses: bmlt-enabled/wordpress-releases-github-action@v1
+        with:
+          file: ${{ env.DIST_DIR_S3 }}/${{ env.ZIP_FILENAME }}
+          s3_key: ${{ env.S3_KEY }}
+          aws_account_id: ${{ secrets.AWS_ACCOUNT_ID }}
+
+      - uses: act10ns/slack@v1
+        with:
+          status: ${{ job.status }}
+          steps: ${{ toJson(steps) }}
+          channel: '#list-locations-bmlt'
+        if: failure()
